@@ -52,6 +52,21 @@ name|solr
 operator|.
 name|common
 operator|.
+name|params
+operator|.
+name|UpdateParams
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|util
 operator|.
 name|ContentStream
@@ -205,13 +220,13 @@ argument_list|()
 operator|.
 name|getUpdateProcessingChain
 argument_list|(
-name|SolrPluginUtils
-operator|.
-name|resolveUpdateChainParam
-argument_list|(
 name|params
-argument_list|,
-name|log
+operator|.
+name|get
+argument_list|(
+name|UpdateParams
+operator|.
+name|UPDATE_CHAIN
 argument_list|)
 argument_list|)
 decl_stmt|;
