@@ -155,15 +155,6 @@ argument_list|(
 name|log
 argument_list|)
 decl_stmt|;
-DECL|field|UPDATE_PROCESSOR
-specifier|public
-specifier|static
-specifier|final
-name|String
-name|UPDATE_PROCESSOR
-init|=
-literal|"update.processor"
-decl_stmt|;
 DECL|field|XSLT_CACHE_DEFAULT
 specifier|public
 specifier|static
