@@ -1283,13 +1283,13 @@ name|core
 operator|.
 name|getUpdateProcessingChain
 argument_list|(
-name|SolrPluginUtils
-operator|.
-name|resolveUpdateChainParam
-argument_list|(
 name|params
-argument_list|,
-name|log
+operator|.
+name|get
+argument_list|(
+name|UpdateParams
+operator|.
+name|UPDATE_CHAIN
 argument_list|)
 argument_list|)
 decl_stmt|;
