@@ -3817,99 +3817,6 @@ throw|;
 block|}
 block|}
 block|}
-comment|/**    * This method helps resolve if the deprecated "update.processor" request parameter is used      * and logs a warning if it is. In a future version, this method will be removed and    * Solr will assume "update.chain" and not look for "update.processor"    * @param params an instance of SolrParams from the request    * @param log an instance of a slf4j logger to log a warning in case of deprecated param usage    * @return null if neither is specified, else the value of the param specified    * @deprecated    */
-DECL|method|resolveUpdateChainParam
-specifier|public
-specifier|static
-name|String
-name|resolveUpdateChainParam
-parameter_list|(
-name|SolrParams
-name|params
-parameter_list|,
-name|Logger
-name|log
-parameter_list|)
-block|{
-if|if
-condition|(
-name|params
-operator|.
-name|get
-argument_list|(
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN_DEPRECATED
-argument_list|)
-operator|!=
-literal|null
-operator|&&
-name|log
-operator|!=
-literal|null
-condition|)
-block|{
-name|log
-operator|.
-name|warn
-argument_list|(
-literal|"Use of deprecated update request parameter "
-operator|+
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN_DEPRECATED
-operator|+
-literal|" detected. Please use the new parameter "
-operator|+
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN
-operator|+
-literal|" instead, as support"
-operator|+
-literal|" for "
-operator|+
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN_DEPRECATED
-operator|+
-literal|" will be removed in a later version."
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-operator|(
-name|params
-operator|.
-name|get
-argument_list|(
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN
-argument_list|)
-operator|!=
-literal|null
-operator|)
-condition|?
-name|params
-operator|.
-name|get
-argument_list|(
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN
-argument_list|)
-else|:
-name|params
-operator|.
-name|get
-argument_list|(
-name|UpdateParams
-operator|.
-name|UPDATE_CHAIN_DEPRECATED
-argument_list|)
-return|;
-block|}
 block|}
 end_class
 end_unit
