@@ -59,6 +59,10 @@ Upgrading from Solr 3.6-dev
   and it needs to be registered in solrconfig.xml like this:
     <queryResponseWriter name="velocity" class="solr.VelocityResponseWriter"/>
 
+* The update request parameter to choose Update Request Processor Chain is 
+  renamed from "update.processor" to "update.chain". The old parameter was
+  deprecated but still working since Solr3.2, but is now removed entirely.
+
 Detailed Change List
 ----------------------
 
@@ -382,6 +386,9 @@ Other Changes
   structure is gone. abortOnConfugrationError is also gone as it is no longer referenced.
   Errors should be caught and logged at the top-most level or logged and NOT propagated up the 
   chain. (Erick Erickson)
+
+* SOLR-2105: Remove support for deprecated "update.processor" (since 3.2), in favor of 
+  "update.chain" (janhoy)
 
 
 Documentation
